project ( CrossRenderer )
cmake_minimum_required ( VERSION 3.1 )

set ( CMAKE_CXX_STANDARD 11 )
set ( CMAKE_CXX_STANDARD_REQUIRED ON )

set ( CMAKE_LIBRARY_OUTPUT_DIRECTORY "${PROJECT_BINARY_DIR}/output/bin" )
set ( CMAKE_ARCHIVE_OUTPUT_DIRECTORY "${PROJECT_BINARY_DIR}/output/lib" )
set ( CMAKE_RUNTIME_OUTPUT_DIRECTORY "${PROJECT_BINARY_DIR}/output/bin" )

list ( APPEND CMAKE_MODULE_PATH ${CMAKE_CURRENT_LIST_DIR}/CMakeUtils )
list ( APPEND CMAKE_MODULE_PATH ${CMAKE_ARCHIVE_OUTPUT_DIRECTORY}/cmake )

include ( LocalPackage )
include ( target_warning_options )

set ( LOCAL_PACKAGE_ALLOW_SYSTEM TRUE )
set_local_package_install_location ( "${CMAKE_CURRENT_LIST_DIR}/../ThirdParty/${CMAKE_BUILD_TYPE}" )

string ( TOUPPER ${CMAKE_SYSTEM_NAME} UPPERCASE_SYSTEM_NAME )
set ( CROSS_RENDERER_HOST_PLATFORM_${UPPERCASE_SYSTEM_NAME} TRUE )
set ( CROSS_RENDERER_TARGET_PLATFORM_${UPPERCASE_SYSTEM_NAME} TRUE )

if ( CMAKE_CXX_COMPILER_ID STREQUAL "Clang" )
    set ( CROSS_RENDERER_COMPILER_CLANG TRUE )
elseif ( CMAKE_CXX_COMPILER_ID STREQUAL "GNU" )
    set ( CROSS_RENDERER_COMPILER_GNU TRUE )
elseif ( CMAKE_CXX_COMPILER_ID STREQUAL "MSVC" )
    set ( CROSS_RENDERER_COMPILER_MSVC TRUE )
endif()

message ( STATUS "${PROJECT_NAME} - Building under ${CMAKE_SYSTEM_NAME}")
if ( CROSS_RENDERER_TARGET_PLATFORM_WINDOWS )
    message ( STATUS "${PROJECT_NAME} - Building for Windows")
elseif ( CROSS_RENDERER_TARGET_PLATFORM_LINUX )
    message ( STATUS "${PROJECT_NAME} - Building for Linux")
endif()

list ( APPEND NECESSARY_DEPENDENCIES glfw3 )
list ( APPEND NECESSARY_DEPENDENCIES glm )

foreach ( DEPENDENCY ${NECESSARY_DEPENDENCIES} )
    find_local_package ( ${DEPENDENCY}  )
    string ( TOUPPER ${DEPENDENCY} UPPERCASE_DEPENDENCY )
    if ( NOT ${UPPERCASE_DEPENDENCY}_FOUND )
        install_local_package ( ${DEPENDENCY} )
    endif()
endforeach()

# GLFW3
if ( GLFW3_FOUND )
    option ( CROSS_RENDERER_GLFW3_BACKEND_SUPPORT "Build GLFW3 window backend support" TRUE )
    if ( CROSS_RENDERER_GLFW3_BACKEND_SUPPORT )
        message ( STATUS "${PROJECT_NAME} - Building with GLFW3 backend support" )
        list ( APPEND CROSS_RENDERER_INCLUDE_DIRS ${GLFW3_INCLUDE_DIRS} )
        list ( APPEND CROSS_RENDERER_LIBRARIES ${GLFW3_LIBRARIES} )
        file ( GLOB CROSS_RENDERER_GLFW3_SOURCES "WindowManager/GLFW3/*" )
        list ( APPEND CROSS_RENDERER_SOURCE_FILES ${CROSS_RENDERER_GLFW3_SOURCES} )
        source_group ( "WindowManager/GLFW3" FILES ${CROSS_RENDERER_GLFW3_SOURCES} )
        if ( CROSS_RENDERER_TARGET_PLATFORM_WINDOWS )
            foreach ( WINDOWS_LIBRARY winmm imm32 version )
                find_library ( LIBRARY_LOCATION NAMES ${WINDOWS_LIBRARY} )
                list ( APPEND CROSS_RENDERER_LIBRARIES ${LIBRARY_LOCATION} )
            endforeach()
        endif()
    endif()
endif()

# OpenGL backend
set ( OpenGL_GL_PREFERENCE GLVND )
find_package ( OpenGL QUIET )
if ( OPENGL_FOUND )
    option ( CROSS_RENDERER_OPENGL_CORE_SUPPORT "Enable support for OpenGL Core" TRUE )
    if ( CROSS_RENDERER_OPENGL_CORE_SUPPORT )
        message ( STATUS "${PROJECT_NAME} - Building OpenGL core backend" )
        file ( GLOB CROSS_RENDERER_OPENGL_SOURCES "Renderer/OpenGL/*.cpp" "Renderer/OpenGL/*.hpp" )
        list ( APPEND CROSS_RENDERER_SOURCE_FILES ${CROSS_RENDERER_OPENGL_SOURCES} )
        source_group ( "OpenGL" FILES ${CROSS_RENDERER_OPENGL_SOURCES} )

        # GLAD core
        file ( GLOB_RECURSE GLAD_SOURCES "Renderer/OpenGL/glad_core/*")
        add_library ( GLAD ${GLAD_SOURCES} )
        target_include_directories ( GLAD PUBLIC ${CMAKE_CURRENT_LIST_DIR}/Renderer/OpenGL/glad_core/include )
        list ( APPEND CROSS_RENDERER_LIBRARIES GLAD )
        target_warning_options ( GLAD DISABLED )

        if ( CROSS_RENDERER_TARGET_PLATFORM_LINUX )
            foreach ( LINUX_LIBRARY dl )
                find_library ( LIBRARY_LOCATION NAMES ${LINUX_LIBRARY} )
                list ( APPEND CROSS_RENDERER_LIBRARIES ${LIBRARY_LOCATION} )
            endforeach()
        endif()
    endif()
endif()

# Main library
configure_file ( CrossRendererConfig.hpp.in CrossRendererConfig.hpp )
file ( GLOB SOURCES "*.cpp" "*.hpp" "Renderer/*.cpp" "Renderer/*.hpp" "WindowManager/*.cpp" "WindowManager/*.hpp" CrossRendererConfig.hpp.in AstyleConfig.astylerc )
list ( APPEND CROSS_RENDERER_SOURCE_FILES ${SOURCES} )
add_library ( CrossRenderer ${CROSS_RENDERER_SOURCE_FILES} )
target_include_directories ( CrossRenderer PUBLIC ${CROSS_RENDERER_INCLUDE_DIRS} ${CMAKE_CURRENT_BINARY_DIR} ${GLM_INCLUDE_DIRS} ExternalModules )
target_link_libraries ( CrossRenderer PUBLIC ${CROSS_RENDERER_LIBRARIES} )
target_compile_definitions ( CrossRenderer PRIVATE ${CROSS_RENDERER_DEFINITIONS} )
target_warning_options ( CrossRenderer HIGH AS_ERRORS )
